--- a/src/webapp-src/index.html
+++ b/src/webapp-src/index.html
@@ -7,11 +7,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
 
- 
+   <link rel="icon" href="assets/images/icons/favicon.ico" type="image/ico" />
+
+
    <link href="assets/css/font-awesome/css/font-awesome.css" rel="stylesheet">
    <link href="assets/css/bootstrap.css" rel="stylesheet">
    <link href="assets/css/custom.css" rel="stylesheet">
- 
+
     <script src="assets/js/jquery.js"></script>
     <script src="assets/js/tether.min.js"></script>
     <script src="assets/js/require_main.built.js"></script> 
