--- a/src/webapp-src/index.html
+++ b/src/webapp-src/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
 
-   <link rel="icon" href="assets/images/icons/favicon.ico" type="image/ico" />
+   <link rel="icon" href="assets/images/favicon.ico" type="image/ico" />
 
 
    <link href="assets/css/font-awesome/css/font-awesome.css" rel="stylesheet">
