--- a/src/webapp-src/index.html
+++ b/src/webapp-src/index.html
@@ -12,10 +12,12 @@
 
    <link href="assets/css/font-awesome/css/font-awesome.css" rel="stylesheet">
    <link href="assets/css/bootstrap.css" rel="stylesheet">
+   <link href="assets/css/dataTables.bootstrap4.min.css" rel="stylesheet">
+
    <link href="assets/css/custom.css" rel="stylesheet">
 
     <script src="assets/js/jquery.js"></script>
-    <script src="assets/js/tether.min.js"></script>
+    <script src="assets/js/popper.js"></script>
     <script src="assets/js/require_main.built.js"></script> 
 
     <script>
